<?xml version="1.0"?>
<package format="2">
  <name>arm22_panel_localization</name>
  <version>1.0.0</version>
  <description>The arm22_panel_localization package</description>

  <maintainer email="payzunburak@gmail.com">Burak Payzun</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
